fix(timer): set counter-bar width to 100% for proper spacing

--- a/styles/components/_timer.scss
+++ b/styles/components/_timer.scss
@@ -224,8 +224,6 @@ gap: 0.25rem;
 
 }
 
-
-
 .timer-card__counter{
     align-items: center;
     display: flex;
@@ -238,10 +236,13 @@ gap: 0.25rem;
     }
  
 
-    &-bar {
+    &-bar-container {
+        
         display: flex;
         flex-direction: row;
-        gap: 0.2rem;
+        gap: 0.125rem;
+        justify-content: space-evenly;
+        width: 100%;
     }
     
     &-container {
