--- a/styles/style.css
+++ b/styles/style.css
@@ -868,10 +868,12 @@ body {
     justify-content: right;
   }
 }
-.timer-card__counter-bar {
+.timer-card__counter-bar-container {
   display: flex;
   flex-direction: row;
-  gap: 0.2rem;
+  gap: 0.125rem;
+  justify-content: space-evenly;
+  width: 100%;
 }
 .timer-card__counter-container {
   align-items: center;
